--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,21 @@ dependencies = [
 requires-python = ">=3.8"
 readme = "README.md"
 license = {text = "MIT"}
+keywords = [
+    "typing",
+    "pattern",
+    "converter",
+    "validator"
+]
+classifiers=[
+    "Development Status :: 4 - Beta",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Operating System :: OS Independent",
+]
 [project.urls]
 repository = "https://github.com/ArcletProject/NEPattern"
 
