--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "nepattern"
-version = "0.2.1"
+version = "0.3.0"
 description = "a complex pattern, support typing"
 authors = [
     {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
 ]
 dependencies = [
-    "typing-extensions~=4.3.0",
+    "typing-extensions~=4.4.0",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
@@ -18,6 +18,7 @@ keywords = [
     "validator"
 ]
 classifiers=[
+    "Typing :: Typed",
     "Development Status :: 4 - Beta",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.8",
@@ -42,8 +43,11 @@ includes = ["nepattern"]
 [tool.pdm.dev-dependencies]
 dev = [
     "pytest~=7.1.3",
-    "coverage~=6.4.1"
+    "coverage~=6.5.0"
 ]
+
+[tool.pdm.scripts]
+test = {composite = ["coverage run -m pytest -vv", "coverage xml", "coverage report"]}
 
 [tool.coverage.run]
 branch = true
@@ -70,3 +74,6 @@ exclude_lines = [
     "def __eq__",
     "except ImportError:",
 ]
+
+[tool.pytest.ini_options]
+python_files = "test.py"
