--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "nepattern"
-version = "0.3.2"
+version = "0.4.0"
 description = "a complex pattern, support typing"
 authors = [
     {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
@@ -30,6 +30,7 @@ classifiers=[
 [project.urls]
 repository = "https://github.com/ArcletProject/NEPattern"
 
+[project.optional-dependencies]
 [build-system]
 requires = ["pdm-pep517>=1.0.0"]
 build-backend = "pdm.pep517.api"
@@ -43,7 +44,8 @@ includes = ["nepattern"]
 [tool.pdm.dev-dependencies]
 dev = [
     "pytest~=7.1.3",
-    "coverage~=6.5.0"
+    "coverage~=6.5.0",
+    "fix-future-annotations>=0.5.0",
 ]
 
 [tool.pdm.scripts]
