--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 dependencies = [
     "typing-extensions>=4.5.0",
-    "tarina>=0.3.3",
+    "tarina>=0.4.0",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
@@ -81,3 +81,17 @@ exclude_lines = [
 
 [tool.pytest.ini_options]
 python_files = "test.py"
+
+[tool.black]
+line-length = 110
+target-version = ["py38", "py39", "py310", "py311"]
+include = '\.pyi?$'
+extend-exclude = '''
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 110
+skip_gitignore = true
+force_sort_within_sections = true
+extra_standard_library = ["typing_extensions"]
