--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "nepattern"
-version = "0.6.0"
+version = "0.6.1"
 description = "a complex pattern, support typing"
 authors = [
     {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
@@ -76,6 +76,7 @@ exclude_lines = [
     "def __repr__",
     "def __str__",
     "def __eq__",
+    "def __calc_eq__",
     "except ImportError:",
 ]
 
