--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "nepattern"
-version = "0.7.1"
+version = "0.7.2"
 description = "a complex pattern, support typing"
 authors = [
     {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
@@ -31,7 +31,6 @@ classifiers=[
 [project.urls]
 repository = "https://github.com/ArcletProject/NEPattern"
 
-[project.optional-dependencies]
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
@@ -47,6 +46,8 @@ dev = [
     "pytest~=7.1.3",
     "coverage~=6.5.0",
     "fix-future-annotations>=0.5.0",
+    "isort>=5.13.2",
+    "black>=24.4.1",
 ]
 
 [tool.pdm.scripts]
