:construction_worker: update test CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,8 @@ jobs:
         py_ver: ['3.9', '3.10', '3.11', '3.12']
     runs-on:  ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         name: Ensure Python Runtime
         with:
           python-version: ${{matrix.py_ver}}
@@ -22,6 +22,8 @@ jobs:
       - name: Test & Report
         run: |
           pdm run test
-      - uses: codecov/codecov-action@v3.1.1
+      - uses: codecov/codecov-action@v4
+        if: matrix.py_ver == '3.12'
         with:
           files: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
